# openenclave-openssl

./: .gitmodules  README.md
oecrypto/: CMakeLists.txt  README.md
oecrypto/cmake/: OECryptoConfig.cmake.in  add_enclave.cmake  add_enclave_test.cmake  oecrypto.pc.in  oecryptorc  oeedl_file.cmake  package_settings.cmake
oecrypto/common/: argv.c  asn1.c  asn1.h  cert.c  common.h  datetime.c  kdf.c  lockless_queue.c  oe_host_stdio.h  oe_host_stdlib.h  result.c  safecrt.c  syscall.edl
oecrypto/common/sgx/: qeidentity.c  qeidentity.h  quote.c  report.c  revocation.c  revocation.h  sgxcertextensions.c  tcbinfo.c  tcbinfo.h  tlsverifier.c
oecrypto/include/: CMakeLists.txt
oecrypto/include/oecrypto/corelibc/: pthread.h  setjmp.h  stdbool.h  stdio.h  stdlib.h  string.h
oecrypto/include/oecrypto/internal/: calls.h  constants_x64.h  context.inc  epid.h  globals.h  load.h  lockless_queue.h  malloc.h  mem.h  print.h  raise.h  report.h  sgxcertextensions.h  sgxtypes.h  tests.h  types.h  utils.h
oecrypto/include/oecrypto/internal/crypto/: cert.h  cmac.h  crl.h  hash.h  hmac.h
oecrypto/include/oecrypto/internal/debugrt/: host.h
oecrypto/include/oecrypto/internal/syscall/: device.h  dirent.h  fcntl.h  fd.h  fdtable.h  iov.h  netdb.h  poll.h  raise.h  resolver.h  types.h  unistd.h
oecrypto/include/oecrypto/internal/syscall/arpa/: inet.h
oecrypto/include/oecrypto/internal/syscall/netinet/: in.h
oecrypto/include/oecrypto/internal/syscall/sys/: epoll.h  ioctl.h  select.h  socket.h  stat.h  syscall.h  types.h  utsname.h
oecrypto/src/: magic.h
oecrypto/src/crypto/: CMakeLists.txt  asn1.c  cert.c  cmac.c  crl.c  crl.h  ec.c  ec.h  hmac.c  init.c  init.h  key.c  key.h  random.c  rsa.c  rsa.h  sha.c
oecrypto/test/: CMakeLists.txt  crl_tests.c  ec_tests.c  hmac_tests.c  kdf_tests.c  random_tests.c  rdrand_test.c  rsa_tests.c  sha_tests.c  tests.c  utils.c
oecrypto/test/attestation_cert_apis/: CMakeLists.txt
oecrypto/test/attestation_cert_apis/enc/: CMakeLists.txt  enc.cpp
oecrypto/test/attestation_cert_apis/host/: CMakeLists.txt  host.cpp
oecrypto/test/crypto/: CMakeLists.txt  asn1_tests.c  crl_tests.c  ec_tests.c  hash.h  hmac_tests.c  kdf_tests.c  random_tests.c  rdrand_test.c  read_file.c  readfile.h  rsa_tests.c  sha_tests.c  tests.c  tests.h  utils.c
oecrypto/test/crypto/data/: CMakeLists.txt  make-test-certs
oecrypto/test/crypto/enclave/: CMakeLists.txt  crypto.edl
oecrypto/test/crypto/enclave/enc/: CMakeLists.txt  enc.c
oecrypto/test/crypto/enclave/host/: CMakeLists.txt  host.c
oecrypto/test/crypto/host/: CMakeLists.txt  main.c
oecrypto/test/enclave/: CMakeLists.txt
oecrypto/test/enclave/enc/: CMakeLists.txt
oecrypto/test/enclave/host/: host.c
oecrypto/test/host/: CMakeLists.txt
oecrypto/tools/: CMakeLists.txt
oecrypto/tools/oesgx/: CMakeLists.txt  oesgx.c
oecrypto/tools/oesign/: main.c
sample/attested_tls/: CMakeLists.txt
sample/attested_tls/client/enc/: CMakeLists.txt
sample/attested_tls/client/host/: host.cpp
sample/attested_tls/common/: tls_server_enc_mrenclave.h
sample/attested_tls/non_enc_client/: verify_signer_openssl.cpp
sample/attested_tls/server/enc/: CMakeLists.txt
sample/openssl_server/: CMakeLists.txt  openssl_server.edl
sample/openssl_server/enclave/: CMakeLists.txt  enc.c  openssl_server.conf
sample/openssl_server/host/: CMakeLists.txt  host.c
test/: add_enclave_test.cmake  openssl.edl
test/enc/: get_testcase_name.cmake  tests.h
test/host/: CMakeLists.txt  host.cpp
